docs: added while loop

--- a/src/pages/cheatsheet.mdx
+++ b/src/pages/cheatsheet.mdx
@@ -167,6 +167,49 @@ print(som)                 # 55
 
 ---
 
+## While-loop
+
+<details>
+<summary><strong>While True</strong></summary>
+
+```python
+while True:
+    print("Dit stopt nooit!")
+```
+
+</details>
+
+<details>
+<summary><strong>While met voorwaarde</strong></summary>
+
+```python
+teller = 0
+
+while teller < 5:
+    print(teller)
+    teller += 1       # Vergeet dit niet!
+```
+
+</details>
+
+<details>
+<summary><strong>If in een while-loop</strong></summary>
+
+```python
+getal = 1
+
+while getal <= 10:
+    if getal % 2 == 0:
+        print(f"{getal} is even")
+    else:
+        print(f"{getal} is oneven")
+    getal += 1
+```
+
+</details>
+
+---
+
 ## Functies
 
 <details>
